tdf#120830 crash opening Form-Based Filters

regression from
	commit 7469e078dc3a7a891bd7f5c44a693e4421d3bcdd
	loplugin:useuniqueptr in FmXGridCell

Change-Id: Ia74fcb518fe568d702101ff088f30dc8c096528f